--- a/docs/STM32F103C8T6.md
+++ b/docs/STM32F103C8T6.md
@@ -56,26 +56,6 @@ Let's break it down in simple terms:
    - It is part of ARM’s Cortex-M family, optimized for low-cost, real-time embedded systems.
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 Appendix 1
 
 Code	Package	   Pins
@@ -95,3 +75,44 @@ Code	Temperature Range
 T	     -40 to +85 °C
 I	     -40 to +105 °C
 
+
+#----------------------------------------------------------------------------------------
+ Core Concepts to Master for STM32F103C8T6 Embedded Programming
+#----------------------------------------------------------------------------------------
+
+```
+Programming the STM32F103C8T6 for real embedded systems (like a flight controller, moon rover, 
+or industrial automation device) requires knowledge across both hardware and software — from low-level 
+registers to high-level architecture. Here's an essential overview to guide your learning path.
+```
+
+# Core Concepts to Master for STM32F103C8T6 Embedded Programming
+
+1. MCU Architecture and Tooling
+Area	                What You Need
+-------------------------------------------------------------------------------
+ARM Cortex-M3 core	    Understand registers, exceptions, NVIC, stack
+CMSIS	                ARM’s standard headers & helpers (used with STM32 HAL)
+Toolchain	            arm-none-eabi-gcc, linker scripts, Makefiles
+Debugger	            GDB/OpenOCD, ST-Link or J-Link
+
+2. STM32F1 Hardware Peripherals
+Peripheral	       Role
+-------------------------------------------------------------------
+GPIO	           Control LEDs, motors, read buttons/switches
+USART	           UART for serial debug, telemetry, communication
+I2C/SPI	           Talk to sensors (IMU, magnetometer, GPS, barometer)
+ADC	               Read analog sensors (e.g., battery voltage)
+PWM (Timers)	   Motor control (ESCs, servos), precise output
+Timers	           Task scheduling, encoder reading
+EXTI/Interrupts	   Real-time reaction to input (e.g., safety stop)
+SysTick	           FreeRTOS heartbeat or delay mechanism
+
+3. Firmware Layers to Structure Your Code
+Layer	                         Purpose	                 Example
+----------------------------------------------------------------------------
+Bare-metal (CMSIS)	             Direct register control	`GPIOA->ODR
+Board support (blfm_board.c)	 Wrap low-level init	     blfm_board_led_toggle()
+RTOS Layer (FreeRTOS)	         Tasks, queues, timers	     xTaskCreate(...)
+Drivers Layer	                 Isolated modules	         blfm_imu.c, blfm_radio.c
+Application Layer	             High-level behavior	     flight_control.c, main.c
